<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.creadigol.drivehere.ui.GpsAddActivity"
    tools:showIn="@layout/activity_gps_add">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_lot_code">

                <TextView
                    android:id="@+id/tv_serial_number_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="monospace"
                    android:text="@string/enter"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edt_serial_number"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edt_serial_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:background="#00000000"
                    android:fontFamily="monospace"
                    android:hint="@string/serial_number"
                    android:inputType="number|text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_serial_number_hint"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/view_serial_number"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_serial_number" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_technician_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_serial_number">

                <TextView
                    android:id="@+id/tv_technician_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="monospace"
                    android:text="@string/enter"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edt_technician_name"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edt_technician_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:background="#00000000"
                    android:fontFamily="monospace"
                    android:hint="@string/technician"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_technician_name_hint"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/view_technician_name"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_technician_name" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_technician_name">

                <!--<EditText
                    android:id="@+id/edt_gps_serial_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="#00000000"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:hint="Enter "
                    android:inputType="number|text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#6E6E6E"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/iv_gps_image"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="16dp"
            android:fontFamily="monospace"
            android:text="ADD"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
